<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:alignmentMode="alignBounds"
    android:background="#6C0086"
    android:columnCount="1"
    android:orientation="vertical"
    android:paddingBottom="1dp"
    android:rowCount="4" >
    
    <TextView
        android:id="@+id/txtPopupMsg"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="#4C0B5F"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="5dp"       
        android:text="@string/msgPopup"
        android:textStyle="bold"
        android:textSize="15sp"        
        android:textColor="@color/Pink" />

    <Button
        android:id="@+id/btn_PopupBorrar"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/popupbtnBorrar"
        android:textColor="#F7D5FF" 
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_PopupEditar"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/popupbtnEditar"
        android:textColor="#F7D5FF" 
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_PopupCancelar"
        android:textColor="#F7D5FF" 
        android:layout_width="120dp"
        android:layout_height="40dp"       
        android:text="@string/popupbtnCancelar"
        android:textSize="12sp" />

 

</GridLayout>