<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/addvault" >

  
	<!-- 
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
    </RelativeLayout>
    -->
    <TextView
        android:id="@+id/lblAddVaultTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddVaultTitle"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/lblAddVaultDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAddVaultTitulo"
        android:text="@string/AddVaultDescripcion"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="65dp"
        android:textColor="@color/Green"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/lblAddVaultcmbcateg"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAddVaultDescripcion"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"        
        android:text="@string/CategText"
        android:textColor="@color/Green"
        android:textSize="16sp" />

     <TextView
        android:id="@+id/lblAddVaultValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmbAddVaultCateg"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"        
        android:text="@string/AddVaultValor"
        android:textColor="@color/Green"
        android:textSize="16sp" />

      <requestFocus android:layout_width="wrap_content" />

      <EditText
          android:id="@+id/txtAddVaultDescripcion"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/lblAddVaultDescripcion"
          android:layout_centerHorizontal="true"
          android:ems="10"
          android:inputType="textNoSuggestions"
          android:textColor="@color/Chartreuse" />

      <Spinner
          android:id="@+id/cmbAddVaultCateg"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/lblAddVaultcmbcateg"
          android:layout_centerHorizontal="true"
          android:background="@android:color/transparent"
          android:paddingLeft="5dp"
          android:text="@string/descripcion" />

      <EditText
          android:id="@+id/txtAddVaultValor"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/cmbAddVaultCateg"
          android:layout_below="@+id/lblAddVaultValor"
          android:ems="10"
          android:gravity="left|top"
          android:inputType="textMultiLine|textNoSuggestions"
          android:lines="3"
          android:textColor="@color/Chartreuse" />

      <Button
          android:id="@+id/btncanceladdvault"
          android:layout_width="100dp"
          android:layout_height="40dp"
          android:layout_alignBaseline="@+id/btnaddvault"
          android:layout_alignBottom="@+id/btnaddvault"
          android:layout_alignRight="@+id/txtAddVaultValor"
          android:text="@string/bton_cancelar" />

      <Button
          android:id="@+id/btnaddvault"
          android:layout_width="100dp"
          android:layout_height="40dp"
          android:layout_alignLeft="@+id/lblAddVaultTitulo"
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="17dp"
          android:text="@string/bton_aceptar" />

      <ImageView
          android:id="@+id/imgPpreview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/btnaddvault"
          android:layout_alignTop="@+id/txtAddVaultValor"
          android:adjustViewBounds="false"
          android:contentDescription="@string/descripcion"
          android:cropToPadding="false"
          android:scaleType="center"
          android:src="@drawable/imagenico"
          android:visibility="invisible" />

      <Button
          android:id="@+id/btnSelImage"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/txtAddVaultValor"
          android:layout_below="@+id/txtAddVaultValor"
          android:minWidth="40dip"
          android:text="@string/txtBtnImage"
          android:visibility="invisible" />

</RelativeLayout>